--- a/pages/alafrancaise.html
+++ b/pages/alafrancaise.html
@@ -7,7 +7,7 @@
     <!-- Style PC -->
     <link rel="stylesheet" href="style/stylepc.css" media="screen and (max-width: 3000px) and (min-width: 1000px)" />
     <!-- Style Mobile -->
-    <link rel="stylesheet" href="style/stylemobile.css" media="screen and (max-width: 680px)" />
+    <link rel="stylesheet" href="../public/style/main.css" media="screen and (max-width: 680px)" />
     <!-- Style Tablette -->
     <link rel="stylesheet" href="style/styletablette.css" media="screen and (max-width: 999px) and (min-width: 681px)" />
     <!-- Kit Fontawesome -->
