--- a/pages/delicedessens.html
+++ b/pages/delicedessens.html
@@ -7,7 +7,7 @@
     <!-- Style PC -->
     <link rel="stylesheet" href="style/stylepc.css" media="screen and (max-width: 3000px) and (min-width: 1000px)" />
     <!-- Style Mobile -->
-    <link rel="stylesheet" href="style/stylemobile.css" media="screen and (max-width: 680px)" />
+    <link rel="stylesheet" href="../public/style/main.css" media="screen and (max-width: 680px)" />
     <!-- Style Tablette -->
     <link rel="stylesheet" href="style/styletablette.css" media="screen and (max-width: 999px) and (min-width: 681px)" />
     <!-- Kit Fontawesome -->
@@ -21,7 +21,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
     </style>
     <!-- Titre de la page -->
-    <title>Ohmyfood! - La palette du goût</title>
+    <title>Ohmyfood! - Le délice des sens</title>
 </head>
 
 <body>
@@ -34,57 +34,57 @@
     </div>
 
     <!-- Bannière image -->
-    <img src="imgs/palettedugout.jpg" class="imgpageresto" alt="Ohmyfood! La Palette du Goût" />
+    <img src="imgs/delicedessens.jpg" class="imgpageresto" alt="Ohmyfood! Le délice des sens" />
 
     <!-- Section secondaire -->
     <div class="menuresto">
         <div class="entetemenuresto">
-            <h1 class="titlepageresto">La palette du goût</h1>
+            <h1 class="titlepageresto">Le délice des sens</h1>
             <i class="far fa-heart heartpageresto"></i>
         </div>
         <!-- Entrées -->
         <h2 class="typeplat">ENTRÉES</h2>
         <div class="barreverte"></div>
         <div class="etiqmenus">
-            <h3 class="titreplat">Fricassée d'escargot</h3>
+            <h3 class="titreplat">Tartare de thon</h3>
             <div class="infoplat">
-                <p class="soustitreplat">Au piment d'espelette</p>
+                <p class="soustitreplat">Assaisonné au yuzu</p>
                 <p class="prix">25€</p>
             </div>
         </div>
         <div class="etiqmenus">
-            <h3 class="titreplat">Foie gras de canard mi-cuit</h3>
+            <h3 class="titreplat">Bouchée de homard croustillant</h3>
             <div class="infoplat">
-                <p class="soustitreplat">Et ses copeaux de truffe noire</p>
+                <p class="soustitreplat">Et sa farandole de petits légumes</p>
                 <p class="prix">35€</p>
             </div>
         </div>
         <div class="etiqmenus">
-            <h3 class="titreplat">Oeuf au plat</h3>
+            <h3 class="titreplat">Velouté de cèpes</h3>
             <div class="infoplat">
-                <p class="soustitreplat">Assaisonné à la truffe sur lit de...</p>
-                <p class="prix">35€</p>
+                <p class="soustitreplat">Aux truffes</p>
+                <p class="prix">20€</p>
             </div>
         </div>
         <!-- Plats -->
         <h2 class="typeplat">PLATS</h2>
         <div class="barreverte"></div>
         <div class="etiqmenus">
-            <h3 class="titreplat">Filet de boeuf aux herbes</h3>
+            <h3 class="titreplat">Poulet rôti aux herbes de <br>provence</h3>
             <div class="infoplat">
-                <p class="soustitreplat">Accompagné de sa ribambelle de légu...</p>
+                <p class="soustitreplat">Et sa crème de truffe</p>
                 <p class="prix">40€</p>
             </div>
         </div>
         <div class="etiqmenus">
-            <h3 class="titreplat">Parmentier de queue de boeuf</h3>
+            <h3 class="titreplat">Langouste rôtie</h3>
             <div class="infoplat">
-                <p class="soustitreplat">À la truffe noire et sa purée de panais</p>
+                <p class="soustitreplat">Et ses légumes de saison</p>
                 <p class="prix">35€</p>
             </div>
         </div>
         <div class="etiqmenus">
-            <h3 class="titreplat">Filet de Turbot</h3>
+            <h3 class="titreplat">Côte de boeuf angus</h3>
             <div class="infoplat">
                 <p class="soustitreplat">Aux agrumes</p>
                 <p class="prix">44€</p>
@@ -94,23 +94,23 @@
         <h2 class="typeplat">DESSERTS</h2>
         <div class="barreverte"></div>
         <div class="etiqmenus">
-            <h3 class="titreplat">Paris-Brest</h3>
+            <h3 class="titreplat">Farandole de desserts</h3>
             <div class="infoplat">
-                <p class="soustitreplat">Revisité</p>
+                <p class="soustitreplat">Du chef</p>
                 <p class="prix">18€</p>
             </div>
         </div>
         <div class="etiqmenus">
-            <h3 class="titreplat">Macaron au chocolat d'exception</h3>
+            <h3 class="titreplat">Crème brûlée</h3>
             <div class="infoplat">
-                <p class="soustitreplat">Et glace à la vanille de Madagascar</p>
+                <p class="soustitreplat">Revisitée</p>
                 <p class="prix">22€</p>
             </div>
         </div>
         <div class="etiqmenus">
-            <h3 class="titreplat">Mousse au chocolat</h3>
+            <h3 class="titreplat">Tiramisu</h3>
             <div class="infoplat">
-                <p class="soustitreplat">Au piment d'espelette et à la truffe noire</p>
+                <p class="soustitreplat">À la noisette</p>
                 <p class="prix">23€</p>
             </div>
         </div>
