--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Style PC -->
     <link rel="stylesheet" href="style/stylepc.css" media="screen and (max-width: 3000px) and (min-width: 1000px)" />
     <!-- Style Mobile -->
-    <link rel="stylesheet" href="style/stylemobile.css" media="screen and (max-width: 680px)" />
+    <link rel="stylesheet" href="public/style/main.css" media="screen and (max-width: 680px)" />
     <!-- Style Tablette -->
     <link rel="stylesheet" href="style/styletablette.css" media="screen and (max-width: 999px) and (min-width: 681px)" />
     <!-- Kit Fontawesome -->
@@ -27,94 +27,94 @@
 <body>
 
     <!-- Logo entête -->
-    <div class="entetelogo">
-        <img src="imgs/ohmyfood.png" class="logo" alt="Logo Ohmyfood!" />
+    <div class="header">
+        <img src="imgs/ohmyfood.png" class="header--logo" alt="Logo Ohmyfood!" />
     </div>
 
     <!-- Icône et texte - Situation géographique -->
-    <div class="situation">
-        <i class="fas fa-map-marker-alt position"></i>
-        <p class="situationtxt">Paris, Belleville</p>
+    <div class="container__situation">
+        <i class="fas fa-map-marker-alt container__situation--icon"></i>
+        <p class="container__situation--txt">Paris, Belleville</p>
     </div>
 
     <!-- Bannière accueil -->
-    <div class="banniereaccueil">
-        <h1 class="banniereaccueiltitle">Réservez le menu qui vous convient</h1>
-        <p class="banniereaccueiltxt">Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
+    <div class="container__accueil">
+        <h1 class="container__accueil--title">Réservez le menu qui vous convient</h1>
+        <p class="container__accueil--txt">Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
         <div class="button">
-            <a href="#sectionrestaurants">
-                <p class="txtbutton">Explorer nos restaurants</p>
+            <a href="#container__restaurants">
+                <p class="button--txt">Explorer nos restaurants</p>
             </a>
         </div>
     </div>
 
     <!-- Section fonctionnement -->
-    <h1 class="fonctionnement">Fonctionnement</h1>
+    <h1 class="container__etiq">Fonctionnement</h1>
 
     <!-- 1 | Choisissez un restaurant -->
-    <div class="etiq">
-        <p class="number">1</p>
-        <i class="fas fa-mobile-alt iconfonction"></i>
-        <p class="etiqtxt">Choisissez un restaurant</p>
+    <div class="container__etiq--bloc">
+        <p class="container__etiq--number">1</p>
+        <i class="fas fa-mobile-alt container__etiq--icon"></i>
+        <p class="container__etiq--txt">Choisissez un restaurant</p>
     </div>
 
     <!-- 2 | Composez votre menu -->
-    <div class="etiq">
-        <p class="number">2</p>
-        <i class="fas fa-list iconfonction"></i>
-        <p class="etiqtxt">Composez votre menu</p>
+    <div class="container__etiq--bloc">
+        <p class="container__etiq--number">2</p>
+        <i class="fas fa-list container__etiq--icon"></i>
+        <p class="container__etiq--txt">Composez votre menu</p>
     </div>
 
     <!-- 3 | Dégustez au restaurant -->
-    <div class="etiq">
-        <p class="number">3</p>
-        <i class="fas fa-store iconfonction"></i>
-        <p class="etiqtxt">Dégustez au restaurant</p>
+    <div class="container__etiq--bloc">
+        <p class="container__etiq--number">3</p>
+        <i class="fas fa-store container__etiq--icon"></i>
+        <p class="container__etiq--txt">Dégustez au restaurant</p>
     </div>
 
     <!-- Section restaurants -->
-    <div id="sectionrestaurants">
-        <div class="blocrestaurants">
-            <h1 class="restaurants">Restaurants</h1>
+    <div id="container__restaurants">
+        <div class="container__restaurants--section">
+            <h1 class="container__restaurants--titlehead">Restaurants</h1>
 
             <!-- La palette du goût -->
-            <div class="homeblocs">
-                <a href="palettedugout.html">
-                    <img src="imgs/palettedugout.jpg" class="homeblocsimg" alt="La Palette du Goût - Ohmyfood!" />
-                    <h2 class="homeblocstitle">La Palette du Goût</h2>
-                    <p class="homeblocstxt">Ménilmontant</p>
+            <div class="container__restaurants--bloc">
+                <a href="pages/palettedugout.html">
+                    <img src="imgs/palettedugout.jpg" class="container__restaurants--img" alt="La Palette du Goût - Ohmyfood!" />
+                    <h2 class="container__restaurants--title">La Palette du Goût</h2>
+                    <p class="container__restaurants--txt">Ménilmontant</p>
                 </a>
-                <i class="far fa-heart heart"></i>
+                <i class="far fa-heart container__restaurants--heart"></i>
             </div>
 
             <!-- La note enchantée -->
-            <div class="homeblocs">
-                <a href="noteenchantee.html">
-                    <img src="imgs/noteenchantee.jpg" class="homeblocsimg" alt="La Note Enchantée - Ohmyfood!" />
-                    <h2 class="homeblocstitle">La Note Enchantée</h2>
-                    <p class="homeblocstxt">Charonne</p>
+            <div class="container__restaurants--bloc">
+                <a href="pages/noteenchantee.html">
+                    <img src="imgs/noteenchantee.jpg" class="container__restaurants--img" alt="La Note Enchantée - Ohmyfood!" />
+                    <h2 class="container__restaurants--title">La Note Enchantée</h2>
+                    <p class="container__restaurants--txt">Charonne</p>
                 </a>
-                <i class="far fa-heart heart"></i>
+                <i class="far fa-heart container__restaurants--heart"></i>
             </div>
 
             <!-- À la française -->
-            <div class="homeblocs">
-                <a href="alafrancaise.html">
-                    <img src="imgs/alafr.jpg" class="homeblocsimg" alt="À la Française - Ohmyfood!" />
-                    <h2 class="homeblocstitle">À la Française</h2>
-                    <p class="homeblocstxt">Cité Rouge</p>
+            <div class="container__restaurants--bloc">
+                <a href="pages/alafrancaise.html">
+                    <img src="imgs/alafr.jpg" class="container__restaurants--img" alt="À la Française - Ohmyfood!" />
+                    <h2 class="container__restaurants--title">À la Française</h2>
+                    <p class="container__restaurants--txt">Cité Rouge</p>
                 </a>
-                <i class="far fa-heart heart"></i>
+                <i class="far fa-heart container__restaurants--heart"></i>
             </div>
 
             <!-- Le délice des sens -->
-            <div class="homeblocs">
-                <a href="delicedessens.html">
-                    <img src="imgs/delicedessens.jpg" class="homeblocsimg" alt="Le Délice des Sens - Ohmyfood!" />
-                    <h2 class="homeblocstitle">Le Délice des Sens</h2>
-                    <p class="homeblocstxt">Folie Méricourt</p>
+            <div class="container__restaurants--bloc">
+                <a href="pages/delicedessens.html">
+                    <img src="imgs/delicedessens.jpg" class="container__restaurants--img" alt="Le Délice des Sens - Ohmyfood!" />
+                    <h2 class="container__restaurants--title">Le Délice des Sens</h2>
+                    <p class="container__restaurants--txt">Folie Méricourt</p>
                 </a>
-                <i class="far fa-heart heart"></i>
+                <i class="far fa-heart container__restaurants--heart"></i>
             </div>
         </div>
     </div>
@@ -124,18 +124,18 @@
 
     <footer>
         <div class="footer">
-            <img src="imgs/ohmyfood@2x.svg" class="logosvg" alt="Logo Ohmyfood!" />
-            <div class="icontxtfooter">
-                <i class="fas fa-utensils footericon"></i>
-                <p class="txtfooter">Proposer un restaurant</p>
+            <img src="imgs/ohmyfood@2x.svg" class="footer--logo" alt="Logo Ohmyfood!" />
+            <div class="footer--icontxt">
+                <i class="fas fa-utensils footer--icon"></i>
+                <p class="footer--txt">Proposer un restaurant</p>
             </div>
-            <div class="icontxtfooter">
-                <i class="fas fa-hands-helping footericon"></i>
-                <p class="txtfooter">Devenir partenaire</p>
+            <div class="footer--icontxt">
+                <i class="fas fa-hands-helping footer--icon"></i>
+                <p class="footer--txt">Devenir partenaire</p>
             </div>
-            <div class="noicontxtfooter">
-                <p class="txtfooter">Mentions légales</p>
-                <p class="txtfooter">Contact</p>
+            <div class="footer--noicontxt">
+                <p class="footer--txt">Mentions légales</p>
+                <p class="footer--txt">Contact</p>
             </div>
         </div>
     </footer>
