--- a/pages/noteenchantee.html
+++ b/pages/noteenchantee.html
@@ -7,7 +7,7 @@
     <!-- Style PC -->
     <link rel="stylesheet" href="style/stylepc.css" media="screen and (max-width: 3000px) and (min-width: 1000px)" />
     <!-- Style Mobile -->
-    <link rel="stylesheet" href="style/stylemobile.css" media="screen and (max-width: 680px)" />
+    <link rel="stylesheet" href="../public/style/main.css" media="screen and (max-width: 680px)" />
     <!-- Style Tablette -->
     <link rel="stylesheet" href="style/styletablette.css" media="screen and (max-width: 999px) and (min-width: 681px)" />
     <!-- Kit Fontawesome -->
@@ -21,7 +21,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
     </style>
     <!-- Titre de la page -->
-    <title>Ohmyfood! - Le délice des sens</title>
+    <title>Ohmyfood! - La note enchantée</title>
 </head>
 
 <body>
@@ -34,59 +34,66 @@
     </div>
 
     <!-- Bannière image -->
-    <img src="imgs/delicedessens.jpg" class="imgpageresto" alt="Ohmyfood! Le délice des sens" />
+    <img src="imgs/noteenchantee.jpg" class="imgpageresto" alt="Ohmyfood! La note enchantée" />
 
     <!-- Section secondaire -->
     <div class="menuresto">
         <div class="entetemenuresto">
-            <h1 class="titlepageresto">Le délice des sens</h1>
+            <h1 class="titlepageresto">La note enchantée</h1>
             <i class="far fa-heart heartpageresto"></i>
         </div>
         <!-- Entrées -->
         <h2 class="typeplat">ENTRÉES</h2>
         <div class="barreverte"></div>
         <div class="etiqmenus">
-            <h3 class="titreplat">Tartare de thon</h3>
+            <h3 class="titreplat">Ravioles de foie gras</h3>
             <div class="infoplat">
-                <p class="soustitreplat">Assaisonné au yuzu</p>
+                <p class="soustitreplat">Accompagnés de leur crème à la truffe</p>
                 <p class="prix">25€</p>
             </div>
         </div>
         <div class="etiqmenus">
-            <h3 class="titreplat">Bouchée de homard croustillant</h3>
+            <h3 class="titreplat">Caviar osciètre</h3>
             <div class="infoplat">
-                <p class="soustitreplat">Et sa farandole de petits légumes</p>
+                <p class="soustitreplat">Sur blini à la farine de blé noir</p>
                 <p class="prix">35€</p>
             </div>
         </div>
         <div class="etiqmenus">
-            <h3 class="titreplat">Velouté de cèpes</h3>
+            <h3 class="titreplat">Homard et espuma de...</h3>
             <div class="infoplat">
-                <p class="soustitreplat">Aux truffes</p>
+                <p class="soustitreplat">Mariné aux zests d'orange</p>
                 <p class="prix">20€</p>
+            </div>
+        </div>
+        <div class="etiqmenus">
+            <h3 class="titreplat">Foie gras de canard cuit entier</h3>
+            <div class="infoplat">
+                <p class="soustitreplat">Confiture de figue et pain toasté</p>
+                <p class="prix">35€</p>
             </div>
         </div>
         <!-- Plats -->
         <h2 class="typeplat">PLATS</h2>
         <div class="barreverte"></div>
         <div class="etiqmenus">
-            <h3 class="titreplat">Poulet rôti aux herbes de <br>provence</h3>
+            <h3 class="titreplat">Noix de coquilles Saint-Jacques</h3>
             <div class="infoplat">
-                <p class="soustitreplat">Et sa crème de truffe</p>
+                <p class="soustitreplat">Sur lit de purée céleri-rave</p>
                 <p class="prix">40€</p>
             </div>
         </div>
         <div class="etiqmenus">
-            <h3 class="titreplat">Langouste rôtie</h3>
+            <h3 class="titreplat">Langoustine poêlée</h3>
             <div class="infoplat">
-                <p class="soustitreplat">Et ses légumes de saison</p>
+                <p class="soustitreplat">Purée de patate douce</p>
                 <p class="prix">35€</p>
             </div>
         </div>
         <div class="etiqmenus">
-            <h3 class="titreplat">Côte de boeuf angus</h3>
+            <h3 class="titreplat">Mijoté de queue de boeuf</h3>
             <div class="infoplat">
-                <p class="soustitreplat">Aux agrumes</p>
+                <p class="soustitreplat">Et riz sauvage aux zests de citron</p>
                 <p class="prix">44€</p>
             </div>
         </div>
@@ -94,23 +101,23 @@
         <h2 class="typeplat">DESSERTS</h2>
         <div class="barreverte"></div>
         <div class="etiqmenus">
-            <h3 class="titreplat">Farandole de desserts</h3>
+            <h3 class="titreplat">Macaron noisette et chocolat</h3>
             <div class="infoplat">
-                <p class="soustitreplat">Du chef</p>
+                <p class="soustitreplat">Glace au caramel brun et sel de Guérande</p>
                 <p class="prix">18€</p>
             </div>
         </div>
         <div class="etiqmenus">
-            <h3 class="titreplat">Crème brûlée</h3>
+            <h3 class="titreplat">Baba au rhum revisité</h3>
             <div class="infoplat">
-                <p class="soustitreplat">Revisitée</p>
+                <p class="soustitreplat">Avec son coulis de citron</p>
                 <p class="prix">22€</p>
             </div>
         </div>
         <div class="etiqmenus">
-            <h3 class="titreplat">Tiramisu</h3>
+            <h3 class="titreplat">Tarte au citron meringuée</h3>
             <div class="infoplat">
-                <p class="soustitreplat">À la noisette</p>
+                <p class="soustitreplat">Déstructurée</p>
                 <p class="prix">23€</p>
             </div>
         </div>
