Corrections HTML pour le lier au scss

--- a/pages/delicedessens.html
+++ b/pages/delicedessens.html
@@ -25,97 +25,98 @@
 </head>
 
 <body>
-    <div class="toutelapage">
 
     <!-- Logo entête -->
     <div class="entetelogo">
-        <img src="imgs/ohmyfood.png" class="logo" alt="Logo Ohmyfood!" />
-        <a href="index.html"><i class="fas fa-arrow-left arrow"></i></a>
+        <img src="../imgs/ohmyfood.png" class="header--logo" alt="Logo Ohmyfood!" />
+        <a href="../index.html"><i class="fas fa-arrow-left header--arrow"></i></a>
     </div>
 
+    <div class="toutelapage">
+
     <!-- Bannière image -->
-    <img src="imgs/delicedessens.jpg" class="imgpageresto" alt="Ohmyfood! Le délice des sens" />
+    <img src="../imgs/delicedessens.jpg" class="header__imgpagemenu" alt="Ohmyfood! Le délice des sens" />
 
     <!-- Section secondaire -->
-    <div class="menuresto">
-        <div class="entetemenuresto">
-            <h1 class="titlepageresto">Le délice des sens</h1>
-            <i class="far fa-heart heartpageresto"></i>
+    <div class="container__menu">
+        <div class="container__menu--head">
+            <h1 class="container__menu--title">Le délice des sens</h1>
+            <i class="far fa-heart container__menu--heartmenu"></i>
         </div>
         <!-- Entrées -->
-        <h2 class="typeplat">ENTRÉES</h2>
-        <div class="barreverte"></div>
-        <div class="etiqmenus">
-            <h3 class="titreplat">Tartare de thon</h3>
-            <div class="infoplat">
-                <p class="soustitreplat">Assaisonné au yuzu</p>
-                <p class="prix">25€</p>
+        <h2 class="container__menu--typeplat">ENTRÉES</h2>
+        <div class="container__menu--barreverte"></div>
+        <div class="container__menu--bloc">
+            <h3 class="container__menu--titreplat">Tartare de thon</h3>
+            <div class="container__menu--infoplat">
+                <p class="container__menu--soustitreplat">Assaisonné au yuzu</p>
+                <p class="container__menu--prix">25€</p>
             </div>
         </div>
-        <div class="etiqmenus">
-            <h3 class="titreplat">Bouchée de homard croustillant</h3>
-            <div class="infoplat">
-                <p class="soustitreplat">Et sa farandole de petits légumes</p>
-                <p class="prix">35€</p>
+        <div class="container__menu--bloc">
+            <h3 class="container__menu--titreplat">Bouchée de homard croustillant</h3>
+            <div class="container__menu--infoplat">
+                <p class="container__menu--soustitreplat">Et sa farandole de petits légumes</p>
+                <p class="container__menu--prix">35€</p>
             </div>
         </div>
-        <div class="etiqmenus">
-            <h3 class="titreplat">Velouté de cèpes</h3>
-            <div class="infoplat">
-                <p class="soustitreplat">Aux truffes</p>
-                <p class="prix">20€</p>
+        <div class="container__menu--bloc">
+            <h3 class="container__menu--titreplat">Velouté de cèpes</h3>
+            <div class="container__menu--infoplat">
+                <p class="container__menu--soustitreplat">Aux truffes</p>
+                <p class="container__menu--prix">20€</p>
             </div>
         </div>
         <!-- Plats -->
-        <h2 class="typeplat">PLATS</h2>
-        <div class="barreverte"></div>
-        <div class="etiqmenus">
-            <h3 class="titreplat">Poulet rôti aux herbes de <br>provence</h3>
-            <div class="infoplat">
-                <p class="soustitreplat">Et sa crème de truffe</p>
-                <p class="prix">40€</p>
+        <h2 class="container__menu--typeplat">PLATS</h2>
+        <div class="container__menu--barreverte"></div>
+        <div class="container__menu--bloc">
+            <h3 class="container__menu--titreplat">Poulet rôti aux herbes de <br>provence</h3>
+            <div class="container__menu--infoplat">
+                <p class="container__menu--soustitreplat">Et sa crème de truffe</p>
+                <p class="container__menu--prix">40€</p>
             </div>
         </div>
-        <div class="etiqmenus">
-            <h3 class="titreplat">Langouste rôtie</h3>
-            <div class="infoplat">
-                <p class="soustitreplat">Et ses légumes de saison</p>
-                <p class="prix">35€</p>
+        <div class="container__menu--bloc">
+            <h3 class="container__menu--titreplat">Langouste rôtie</h3>
+            <div class="container__menu--infoplat">
+                <p class="container__menu--soustitreplat">Et ses légumes de saison</p>
+                <p class="container__menu--prix">35€</p>
             </div>
         </div>
-        <div class="etiqmenus">
-            <h3 class="titreplat">Côte de boeuf angus</h3>
-            <div class="infoplat">
-                <p class="soustitreplat">Aux agrumes</p>
-                <p class="prix">44€</p>
+        <div class="container__menu--bloc">
+            <h3 class="container__menu--titreplat">Côte de boeuf angus</h3>
+            <div class="container__menu--infoplat">
+                <p class="container__menu--soustitreplat">Aux agrumes</p>
+                <p class="container__menu--prix">44€</p>
             </div>
         </div>
         <!-- Desserts -->
-        <h2 class="typeplat">DESSERTS</h2>
-        <div class="barreverte"></div>
-        <div class="etiqmenus">
-            <h3 class="titreplat">Farandole de desserts</h3>
-            <div class="infoplat">
-                <p class="soustitreplat">Du chef</p>
-                <p class="prix">18€</p>
+        <h2 class="container__menu--typeplat">DESSERTS</h2>
+        <div class="container__menu--barreverte"></div>
+        <div class="container__menu--bloc">
+            <h3 class="container__menu--titreplat">Farandole de desserts</h3>
+            <div class="container__menu--infoplat">
+                <p class="container__menu--soustitreplat">Du chef</p>
+                <p class="container__menu--prix">18€</p>
             </div>
         </div>
-        <div class="etiqmenus">
-            <h3 class="titreplat">Crème brûlée</h3>
-            <div class="infoplat">
-                <p class="soustitreplat">Revisitée</p>
-                <p class="prix">22€</p>
+        <div class="container__menu--bloc">
+            <h3 class="container__menu--titreplat">Crème brûlée</h3>
+            <div class="container__menu--infoplat">
+                <p class="container__menu--soustitreplat">Revisitée</p>
+                <p class="container__menu--prix">22€</p>
             </div>
         </div>
-        <div class="etiqmenus">
-            <h3 class="titreplat">Tiramisu</h3>
-            <div class="infoplat">
-                <p class="soustitreplat">À la noisette</p>
-                <p class="prix">23€</p>
+        <div class="container__menu--bloc">
+            <h3 class="container__menu--titreplat">Tiramisu</h3>
+            <div class="container__menu--infoplat">
+                <p class="container__menu--soustitreplat">À la noisette</p>
+                <p class="container__menu--prix">23€</p>
             </div>
         </div>
-        <div class="buttoncommande">
-            <p class="txtbuttoncommande">Commander</p>
+        <div class="button">
+            <p class="button--txt">Commander</p>
         </div>
     </div>
 </div>
@@ -125,18 +126,18 @@
 
     <footer>
         <div class="footer">
-            <img src="imgs/ohmyfood@2x.svg" class="logosvg" alt="Logo Ohmyfood!" />
-            <div class="icontxtfooter">
-                <i class="fas fa-utensils footericon"></i>
-                <p class="txtfooter">Proposer un restaurant</p>
+            <img src="../imgs/ohmyfood@2x.svg" class="footer--logo" alt="Logo Ohmyfood!" />
+            <div class="footer--icontxt">
+                <i class="fas fa-utensils footer--icon"></i>
+                <p class="footer--txt">Proposer un restaurant</p>
             </div>
-            <div class="icontxtfooter">
-                <i class="fas fa-hands-helping footericon"></i>
-                <p class="txtfooter">Devenir partenaire</p>
+            <div class="footer--icontxt">
+                <i class="fas fa-hands-helping footer--icon"></i>
+                <p class="footer--txt">Devenir partenaire</p>
             </div>
-            <div class="noicontxtfooter">
-                <p class="txtfooter">Mentions légales</p>
-                <p class="txtfooter">Contact</p>
+            <div class="footer--noicontxt">
+                <p class="footer--txt">Mentions légales</p>
+                <p class="footer--txt">Contact</p>
             </div>
         </div>
     </footer>
