--- a/pages/alafrancaise.html
+++ b/pages/alafrancaise.html
@@ -25,97 +25,98 @@
 </head>
 
 <body>
-    <div class="toutelapage">
 
     <!-- Logo entête -->
     <div class="entetelogo">
-        <img src="imgs/ohmyfood.png" class="logo" alt="Logo Ohmyfood!" />
-        <a href="index.html"><i class="fas fa-arrow-left arrow"></i></a>
+        <img src="../imgs/ohmyfood.png" class="header--logo" alt="Logo Ohmyfood!" />
+        <a href="../index.html"><i class="fas fa-arrow-left header--arrow"></i></a>
     </div>
 
+    <div class="toutelapage">
+
     <!-- Bannière image -->
-    <img src="imgs/alafr.jpg" class="imgpageresto" alt="Ohmyfood! À la française" />
+    <img src="../imgs/alafr.jpg" class="header__imgpagemenu" alt="Ohmyfood! À la française" />
 
     <!-- Section secondaire -->
-    <div class="menuresto">
-        <div class="entetemenuresto">
-            <h1 class="titlepageresto">À la française</h1>
-            <i class="far fa-heart heartpageresto"></i>
+    <div class="container__menu">
+        <div class="container__menu--head">
+            <h1 class="container__menu--title">À la française</h1>
+            <i class="far fa-heart container__menu--heartmenu"></i>
         </div>
         <!-- Entrées -->
-        <h2 class="typeplat">ENTRÉES</h2>
-        <div class="barreverte"></div>
-        <div class="etiqmenus">
-            <h3 class="titreplat">Tartare de poulpe acidulé</h3>
-            <div class="infoplat">
-                <p class="soustitreplat">Aux zests d'orange</p>
-                <p class="prix">25€</p>
+        <h2 class="container__menu--typeplat">ENTRÉES</h2>
+        <div class="container__menu--barreverte"></div>
+        <div class="container__menu--bloc">
+            <h3 class="container__menu--titreplat">Tartare de poulpe acidulé</h3>
+            <div class="container__menu--infoplat">
+                <p class="container__menu--soustitreplat">Aux zests d'orange</p>
+                <p class="container__menu--prix">25€</p>
             </div>
         </div>
-        <div class="etiqmenus">
-            <h3 class="titreplat">Velouté de légumes d'antan</h3>
-            <div class="infoplat">
-                <p class="soustitreplat">Carottes, panais, topinambour</p>
-                <p class="prix">35€</p>
+        <div class="container__menu--bloc">
+            <h3 class="container__menu--titreplat">Velouté de légumes d'antan</h3>
+            <div class="container__menu--infoplat">
+                <p class="container__menu--soustitreplat">Carottes, panais, topinambour</p>
+                <p class="container__menu--prix">35€</p>
             </div>
         </div>
-        <div class="etiqmenus">
-            <h3 class="titreplat">Soupe à l'oignon</h3>
-            <div class="infoplat">
-                <p class="soustitreplat">Revisitée</p>
-                <p class="prix">20€</p>
+        <div class="container__menu--bloc">
+            <h3 class="container__menu--titreplat">Soupe à l'oignon</h3>
+            <div class="container__menu--infoplat">
+                <p class="container__menu--soustitreplat">Revisitée</p>
+                <p class="container__menu--prix">20€</p>
             </div>
         </div>
         <!-- Plats -->
-        <h2 class="typeplat">PLATS</h2>
-        <div class="barreverte"></div>
-        <div class="etiqmenus">
-            <h3 class="titreplat">Coquilles Saint-Jacques</h3>
-            <div class="infoplat">
-                <p class="soustitreplat">Accompagnées d'une purée de panais</p>
-                <p class="prix">40€</p>
+        <h2 class="container__menu--typeplat">PLATS</h2>
+        <div class="container__menu--barreverte"></div>
+        <div class="container__menu--bloc">
+            <h3 class="container__menu--titreplat">Coquilles Saint-Jacques</h3>
+            <div class="container__menu--infoplat">
+                <p class="container__menu--soustitreplat">Accompagnées d'une purée de panais</p>
+                <p class="container__menu--prix">40€</p>
             </div>
         </div>
-        <div class="etiqmenus">
-            <h3 class="titreplat">Magret de canard</h3>
-            <div class="infoplat">
-                <p class="soustitreplat">Et parmentier de pommes de terre</p>
-                <p class="prix">35€</p>
+        <div class="container__menu--bloc">
+            <h3 class="container__menu--titreplat">Magret de canard</h3>
+            <div class="container__menu--infoplat">
+                <p class="container__menu--soustitreplat">Et parmentier de pommes de terre</p>
+                <p class="container__menu--prix">35€</p>
             </div>
         </div>
-        <div class="etiqmenus">
-            <h3 class="titreplat">Pigeonneau d'Ille-et-Vilaine</h3>
-            <div class="infoplat">
-                <p class="soustitreplat">Sur son lit de gnocchis aux légumes</p>
-                <p class="prix">44€</p>
+        <div class="container__menu--bloc">
+            <h3 class="container__menu--titreplat">Pigeonneau d'Ille-et-Vilaine</h3>
+            <div class="container__menu--infoplat">
+                <p class="container__menu--soustitreplat">Sur son lit de gnocchis aux légumes</p>
+                <p class="container__menu--prix">44€</p>
             </div>
         </div>
         <!-- Desserts -->
-        <h2 class="typeplat">DESSERTS</h2>
-        <div class="barreverte"></div>
-        <div class="etiqmenus">
-            <h3 class="titreplat">Pétales de violettes glacées</h3>
-            <div class="infoplat">
-                <p class="soustitreplat">Et purée de noisettes</p>
-                <p class="prix">18€</p>
+        <h2 class="container__menu--typeplat">DESSERTS</h2>
+        <div class="container__menu--barreverte"></div>
+        <div class="container__menu--bloc">
+            <h3 class="container__menu--titreplat">Pétales de violettes glacées</h3>
+            <div class="container__menu--infoplat">
+                <p class="container__menu--soustitreplat">Et purée de noisettes</p>
+                <p class="container__menu--prix">18€</p>
             </div>
         </div>
-        <div class="etiqmenus">
-            <h3 class="titreplat">Fondant au chocolat</h3>
-            <div class="infoplat">
-                <p class="soustitreplat">Revisité</p>
-                <p class="prix">22€</p>
+        <div class="container__menu--bloc">
+            <h3 class="container__menu--titreplat">Fondant au chocolat</h3>
+            <div class="container__menu--infoplat">
+                <p class="container__menu--soustitreplat">Revisité</p>
+                <p class="container__menu--prix">22€</p>
             </div>
         </div>
-        <div class="etiqmenus">
-            <h3 class="titreplat">Millefeuille croustillant</h3>
-            <div class="infoplat">
-                <p class="soustitreplat">Myrtilles et pâte d'amande</p>
-                <p class="prix">23€</p>
+        <div class="container__menu--bloc">
+            <h3 class="container__menu--titreplat">Millefeuille croustillant</h3>
+            <div class="container__menu--infoplat">
+                <p class="container__menu--soustitreplat">Myrtilles et pâte d'amande</p>
+                <p class="container__menu--prix">23€</p>
             </div>
         </div>
-        <div class="buttoncommande">
-            <p class="txtbuttoncommande">Commander</p>
+        <div class="button">
+            <p class="button--txt">Commander</p>
         </div>
     </div>
 </div>
@@ -125,18 +126,18 @@
 
     <footer>
         <div class="footer">
-            <img src="imgs/ohmyfood@2x.svg" class="logosvg" alt="Logo Ohmyfood!" />
-            <div class="icontxtfooter">
-                <i class="fas fa-utensils footericon"></i>
-                <p class="txtfooter">Proposer un restaurant</p>
+            <img src="../imgs/ohmyfood@2x.svg" class="footer--logo" alt="Logo Ohmyfood!" />
+            <div class="footer--icontxt">
+                <i class="fas fa-utensils footer--icon"></i>
+                <p class="footer--txt">Proposer un restaurant</p>
             </div>
-            <div class="icontxtfooter">
-                <i class="fas fa-hands-helping footericon"></i>
-                <p class="txtfooter">Devenir partenaire</p>
+            <div class="footer--icontxt">
+                <i class="fas fa-hands-helping footer--icon"></i>
+                <p class="footer--txt">Devenir partenaire</p>
             </div>
-            <div class="noicontxtfooter">
-                <p class="txtfooter">Mentions légales</p>
-                <p class="txtfooter">Contact</p>
+            <div class="footer--noicontxt">
+                <p class="footer--txt">Mentions légales</p>
+                <p class="footer--txt">Contact</p>
             </div>
         </div>
     </footer>
