--- a/pages/noteenchantee.html
+++ b/pages/noteenchantee.html
@@ -25,104 +25,105 @@
 </head>
 
 <body>
-    <div class="toutelapage">
 
     <!-- Logo entête -->
     <div class="entetelogo">
-        <img src="imgs/ohmyfood.png" class="logo" alt="Logo Ohmyfood!" />
-        <a href="index.html"><i class="fas fa-arrow-left arrow"></i></a>
+        <img src="../imgs/ohmyfood.png" class="header--logo" alt="Logo Ohmyfood!" />
+        <a href="../index.html"><i class="fas fa-arrow-left header--arrow"></i></a>
     </div>
 
+    <div class="toutelapage">
+
     <!-- Bannière image -->
-    <img src="imgs/noteenchantee.jpg" class="imgpageresto" alt="Ohmyfood! La note enchantée" />
+    <img src="../imgs/noteenchantee.jpg" class="header__imgpagemenu" alt="Ohmyfood! La note enchantée" />
 
     <!-- Section secondaire -->
-    <div class="menuresto">
-        <div class="entetemenuresto">
-            <h1 class="titlepageresto">La note enchantée</h1>
-            <i class="far fa-heart heartpageresto"></i>
+    <div class="container__menu">
+        <div class="container__menu--head">
+            <h1 class="container__menu--title">La note enchantée</h1>
+            <i class="far fa-heart container__menu--heartmenu"></i>
         </div>
         <!-- Entrées -->
-        <h2 class="typeplat">ENTRÉES</h2>
-        <div class="barreverte"></div>
-        <div class="etiqmenus">
-            <h3 class="titreplat">Ravioles de foie gras</h3>
-            <div class="infoplat">
-                <p class="soustitreplat">Accompagnés de leur crème à la truffe</p>
-                <p class="prix">25€</p>
+        <h2 class="container__menu--typeplat">ENTRÉES</h2>
+        <div class="container__menu--barreverte"></div>
+        <div class="container__menu--bloc">
+            <h3 class="container__menu--titreplat">Ravioles de foie gras</h3>
+            <div class="container__menu--infoplat">
+                <p class="container__menu--soustitreplat">Accompagnés de leur crème à la truffe</p>
+                <p class="container__menu--prix">25€</p>
             </div>
         </div>
-        <div class="etiqmenus">
-            <h3 class="titreplat">Caviar osciètre</h3>
-            <div class="infoplat">
-                <p class="soustitreplat">Sur blini à la farine de blé noir</p>
-                <p class="prix">35€</p>
+        <div class="container__menu--bloc">
+            <h3 class="container__menu--titreplat">Caviar osciètre</h3>
+            <div class="container__menu--infoplat">
+                <p class="container__menu--soustitreplat">Sur blini à la farine de blé noir</p>
+                <p class="container__menu--prix">35€</p>
             </div>
         </div>
-        <div class="etiqmenus">
-            <h3 class="titreplat">Homard et espuma de...</h3>
-            <div class="infoplat">
-                <p class="soustitreplat">Mariné aux zests d'orange</p>
-                <p class="prix">20€</p>
+        <div class="container__menu--bloc">
+            <h3 class="container__menu--titreplat">Homard et espuma de...</h3>
+            <div class="container__menu--infoplat">
+                <p class="container__menu--soustitreplat">Mariné aux zests d'orange</p>
+                <p class="container__menu--prix">20€</p>
             </div>
         </div>
-        <div class="etiqmenus">
-            <h3 class="titreplat">Foie gras de canard cuit entier</h3>
-            <div class="infoplat">
-                <p class="soustitreplat">Confiture de figue et pain toasté</p>
-                <p class="prix">35€</p>
+        <div class="container__menu--bloc">
+            <h3 class="container__menu--titreplat">Foie gras de canard cuit entier</h3>
+            <div class="container__menu--infoplat">
+                <p class="container__menu--soustitreplat">Confiture de figue et pain toasté</p>
+                <p class="container__menu--prix">35€</p>
             </div>
         </div>
         <!-- Plats -->
-        <h2 class="typeplat">PLATS</h2>
-        <div class="barreverte"></div>
-        <div class="etiqmenus">
-            <h3 class="titreplat">Noix de coquilles Saint-Jacques</h3>
-            <div class="infoplat">
-                <p class="soustitreplat">Sur lit de purée céleri-rave</p>
-                <p class="prix">40€</p>
+        <h2 class="container__menu--typeplat">PLATS</h2>
+        <div class="container__menu--barreverte"></div>
+        <div class="container__menu--bloc">
+            <h3 class="container__menu--titreplat">Noix de coquilles Saint-Jacques</h3>
+            <div class="container__menu--infoplat">
+                <p class="container__menu--soustitreplat">Sur lit de purée céleri-rave</p>
+                <p class="container__menu--prix">40€</p>
             </div>
         </div>
-        <div class="etiqmenus">
-            <h3 class="titreplat">Langoustine poêlée</h3>
-            <div class="infoplat">
-                <p class="soustitreplat">Purée de patate douce</p>
-                <p class="prix">35€</p>
+        <div class="container__menu--bloc">
+            <h3 class="container__menu--titreplat">Langoustine poêlée</h3>
+            <div class="container__menu--infoplat">
+                <p class="container__menu--soustitreplat">Purée de patate douce</p>
+                <p class="container__menu--prix">35€</p>
             </div>
         </div>
-        <div class="etiqmenus">
-            <h3 class="titreplat">Mijoté de queue de boeuf</h3>
-            <div class="infoplat">
-                <p class="soustitreplat">Et riz sauvage aux zests de citron</p>
-                <p class="prix">44€</p>
+        <div class="container__menu--bloc">
+            <h3 class="container__menu--titreplat">Mijoté de queue de boeuf</h3>
+            <div class="container__menu--infoplat">
+                <p class="container__menu--soustitreplat">Et riz sauvage aux zests de citron</p>
+                <p class="container__menu--prix">44€</p>
             </div>
         </div>
         <!-- Desserts -->
-        <h2 class="typeplat">DESSERTS</h2>
-        <div class="barreverte"></div>
-        <div class="etiqmenus">
-            <h3 class="titreplat">Macaron noisette et chocolat</h3>
-            <div class="infoplat">
-                <p class="soustitreplat">Glace au caramel brun et sel de Guérande</p>
-                <p class="prix">18€</p>
+        <h2 class="container__menu--typeplat">DESSERTS</h2>
+        <div class="container__menu--barreverte"></div>
+        <div class="container__menu--bloc">
+            <h3 class="container__menu--titreplat">Macaron noisette et chocolat</h3>
+            <div class="container__menu--infoplat">
+                <p class="container__menu--soustitreplat">Glace au caramel brun et sel de Guérande</p>
+                <p class="container__menu--prix">18€</p>
             </div>
         </div>
-        <div class="etiqmenus">
-            <h3 class="titreplat">Baba au rhum revisité</h3>
-            <div class="infoplat">
-                <p class="soustitreplat">Avec son coulis de citron</p>
-                <p class="prix">22€</p>
+        <div class="container__menu--bloc">
+            <h3 class="container__menu--titreplat">Baba au rhum revisité</h3>
+            <div class="container__menu--infoplat">
+                <p class="container__menu--soustitreplat">Avec son coulis de citron</p>
+                <p class="container__menu--prix">22€</p>
             </div>
         </div>
-        <div class="etiqmenus">
-            <h3 class="titreplat">Tarte au citron meringuée</h3>
-            <div class="infoplat">
-                <p class="soustitreplat">Déstructurée</p>
-                <p class="prix">23€</p>
+        <div class="container__menu--bloc">
+            <h3 class="container__menu--titreplat">Tarte au citron meringuée</h3>
+            <div class="container__menu--infoplat">
+                <p class="container__menu--soustitreplat">Déstructurée</p>
+                <p class="container__menu--prix">23€</p>
             </div>
         </div>
-        <div class="buttoncommande">
-            <p class="txtbuttoncommande">Commander</p>
+        <div class="button">
+            <p class="button--txt">Commander</p>
         </div>
     </div>
 </div>
@@ -132,18 +133,18 @@
 
     <footer>
         <div class="footer">
-            <img src="imgs/ohmyfood@2x.svg" class="logosvg" alt="Logo Ohmyfood!" />
-            <div class="icontxtfooter">
-                <i class="fas fa-utensils footericon"></i>
-                <p class="txtfooter">Proposer un restaurant</p>
+            <img src="../imgs/ohmyfood@2x.svg" class="footer--logo" alt="Logo Ohmyfood!" />
+            <div class="footer--icontxt">
+                <i class="fas fa-utensils footer--icon"></i>
+                <p class="footer--txt">Proposer un restaurant</p>
             </div>
-            <div class="icontxtfooter">
-                <i class="fas fa-hands-helping footericon"></i>
-                <p class="txtfooter">Devenir partenaire</p>
+            <div class="footer--icontxt">
+                <i class="fas fa-hands-helping footer--icon"></i>
+                <p class="footer--txt">Devenir partenaire</p>
             </div>
-            <div class="noicontxtfooter">
-                <p class="txtfooter">Mentions légales</p>
-                <p class="txtfooter">Contact</p>
+            <div class="footer--noicontxt">
+                <p class="footer--txt">Mentions légales</p>
+                <p class="footer--txt">Contact</p>
             </div>
         </div>
     </footer>
