--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <h2 class="container__restaurants--title">La Palette du Goût</h2>
                     <p class="container__restaurants--txt">Ménilmontant</p>
                 </a>
-                <i class="far fa-heart container__restaurants--heart"></i>
+                <i class="fas fa-heart container__restaurants--heart"></i>
             </div>
 
             <!-- La note enchantée -->
@@ -94,7 +94,7 @@
                     <h2 class="container__restaurants--title">La Note Enchantée</h2>
                     <p class="container__restaurants--txt">Charonne</p>
                 </a>
-                <i class="far fa-heart container__restaurants--heart"></i>
+                <i class="fas fa-heart container__restaurants--heart"></i>
             </div>
 
             <!-- À la française -->
@@ -104,7 +104,7 @@
                     <h2 class="container__restaurants--title">À la Française</h2>
                     <p class="container__restaurants--txt">Cité Rouge</p>
                 </a>
-                <i class="far fa-heart container__restaurants--heart"></i>
+                <i class="fas fa-heart container__restaurants--heart"></i>
             </div>
 
             <!-- Le délice des sens -->
@@ -114,7 +114,7 @@
                     <h2 class="container__restaurants--title">Le Délice des Sens</h2>
                     <p class="container__restaurants--txt">Folie Méricourt</p>
                 </a>
-                <i class="far fa-heart container__restaurants--heart"></i>
+                <i class="fas fa-heart container__restaurants--heart"></i>
             </div>
         </div>
     </div>
