--- a/pages/palettedugout.html
+++ b/pages/palettedugout.html
@@ -42,7 +42,7 @@
         <div class="container__menu">
             <div class="container__menu--head">
                 <h1 class="container__menu--title">La palette du goût</h1>
-                <i class="far fa-heart container__menu--heartmenu"></i>
+                <i class="fas fa-heart container__menu--heartmenu"></i>
             </div>
             <!-- Entrées -->
             <h2 class="container__menu--typeplat">ENTRÉES</h2>
