--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                     <p class="container__restaurants--txt">Ménilmontant</p>
                 </a>
                 <i class="fas fa-heart container__restaurants--heart"></i>
+                <i class="far fa-heart container__restaurants--filledheart"></i>
             </div>
 
             <!-- La note enchantée -->
